@@ -14,7 +14,7 @@ clean:
 
 CC       = psp-gcc
 
-CFLAGS   := -D PSP -I $(INCLUDE) -O2 -W -Wall -Werror -Wshadow -G0 -fno-pic -mno-abicalls -fomit-frame-pointer
+CFLAGS   := -D PSP -I $(INCLUDE) -Os -W -Wall -Werror -Wshadow -G0 -fno-pic -mno-abicalls -fomit-frame-pointer
 
 #svn revision in code
 SVNVERSION=$(shell svnversion -n 2> Makefile.cache)
