@@ -214,7 +214,7 @@ SceUID start_module(SceUID modid)
 		/*************************************************************************/
 		g->menu_api.APIVersion = 1;
 		strcpy(g->menu_api.VersionName, "Half Byte Loader R"SVNVERSION );
-		strcpy(g->menu_api.Credits, "m0skit0, ab5000, wololo, davee");
+		strcpy(g->menu_api.Credits, "m0skit0,ab5000,wololo,davee,jjs");
 		g->menu_api.BackgroundFilename = NULL;
         g->menu_api.filename = g->hb_filename;
 	}
